--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "nodemailer": "^7.0.5",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
