--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,190 @@
-# local env vars
+# Environment variables
 .env
+.env.local
+.env.development
+.env.production
+.env.staging
+
+# Database files
 *.sqlite3
 *.db
+*.db-journal
+*.db-shm
+*.db-wal
+
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Logs
+logs/
+*.log
+log/
+*.log.*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Grunt intermediate storage
+.grunt
+
+# Bower dependency directory
+bower_components
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons
+build/Release
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript v1 declaration files
+typings/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Build outputs
+build/
+dist/
+out/
+
+# SSL certificates (if you have any)
+*.pem
+*.key
+*.crt
+*.csr
+
+# PM2 process files
+ecosystem.config.js
+.pm2/
+
+# Docker
+.dockerignore
+Dockerfile*
+docker-compose*.yml
+
+# Backup files
+*.backup
+*.bak
+*.old
+
+# Frontend specific
+# Vite
+.vite/
+
+# React build
+build/
+
+# ESLint
+.eslintcache
+
+# Prettier
+.prettierignore
+
+# Testing
+coverage/
+.nyc_output/
+
+# Local development
+local/
+dev/
+development/
+
+# Upload directories (if you have file uploads)
+uploads/
+public/uploads/
+
+# Email templates backup (if you make backups)
+templates/*.backup
+
+# Process managers
+.pm2/
+pids/
+
+# Monitoring and analytics
+newrelic_agent.log
+
+# Nginx configurations (if any in repo)
+nginx.conf
+sites-available/
+sites-enabled/
+*.nginx
+
+# Project documentation/files
+Project_files/
+project_files/
+
+#working inventory database
+/BourbonDatabase/
