--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "knex": "^3.1.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
+    "redis": "^5.8.3",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
